tests/baselines/reference/asyncArrowFunction7_es6.errors.txt
tests/cases/conformance/async/es6/asyncArrowFunction/asyncArrowFunction7_es6.ts(4,24): error TS2304: Cannot find name 'await'.


==== tests/cases/conformance/async/es6/asyncArrowFunction/asyncArrowFunction7_es6.ts (1 errors) ====
    
    var bar = async (): Promise<void> => {
      // 'await' here is an identifier, and not an await expression.
      var foo = async (a = await): Promise<void> => {
                           ~~~~~
!!! error TS2304: Cannot find name 'await'.
      }
    }